--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
     "check:size:build": "nx run-many -t check:size:build",
-    "check:size:build:ci": "nx affected -t check:size:build --base=$BASE_REF",
     "check:size:build:pre-commit:affected": "nx affected -t check:size:build --base=HEAD",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
     "check:size:json:pre-commit:affected": "nx affected -t check:size:json --base=HEAD --verbose",
-    "check:size:json:ci": "nx affected -t check:size:json --base=$BASE_REF",
+    "check:size:json:ci": "nx run-many -t check:size:json",
     "check:circular": "nx run-many -t check:circular --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
