--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -92,7 +92,9 @@
     "@rudderstack/analytics-js-common": "*",
     "ramda": "0.30.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@bugsnag/js": "6.5.2"
+  },
   "overrides": {},
   "browserslist": {
     "production": [
