feat: error reporting plugin (#1601)
* feat: error reporting plugin

* chore: size limit updated

* chore: size limit updated

* chore: refactor onerror fn and minor changes

* chore: review comment addressed

* refactor: instead of bugsnag core pkg used only required part of event class

* chore: code refactoring

* chore: code refactoring

* chore: review commit addressed

* chore: review comment addressed

* chore: modified isruddersdkerror fn logic to filter integration sdk errors

* chore: fix plugin loading

* chore: log message updated

* chore: used template literal instead of string concatenation in rollup

* fix: unit test cases

* chore: unit test cases

* chore: lock file modified

* chore: more unit tests

* chore: ignore coverage for third party code

* chore: ignore coverage for third party code in sonar

* chore: test cases

* chore: ignore coverage for third party code in sonar

* chore: remove reference

* chore: revert formatting changes

* chore: address review comments

* chore: address review comments

* chore: updated plugin signature for backward compatibility

* chore: added bugsnag plugin for backward compatibility

* chore: size limit updated

* chore: review comment address

* chore: update metrics service url

* chore: address review comment

* chore: address review comment

* chore: address review comment

---------

Co-authored-by: George Bardis <109069547+bardisg@users.noreply.github.com>

--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -89,6 +89,7 @@
   },
   "dependencies": {
     "crypto-es": "2.1.0",
+    "error-stack-parser": "2.1.4",
     "@rudderstack/analytics-js-common": "*",
     "ramda": "0.30.1"
   },
