fix: npm sanity suite

--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -6,14 +6,20 @@
   "main": "./dist/v3/cdn/testBook.js",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf -rf ./reports",
-    "start": "npm run build:v1.1 && npm run build:v3 && npm run build:integrations && npm run start:local",
+    "start": "npm run build:sdk && npm run build:sdk:integrations && npm run start:local",
+    "start:modern": "npm run build:sdk:modern && npm run build:sdk:integrations:modern && npm run build:sdk:plugins && npm run start:local:modern",
+    "start:v1.1": "npm run build:sdk:v1.1 && npm run build:sdk:integrations && npm run start:local:v1.1",
+    "start:v1.1:modern": "npm run build:sdk:v1.1:modern && npm run build:sdk:integrations:modern && npm run start:local:v1.1:modern",
     "build": "rollup -c --environment DISTRIBUTION_TYPE:local",
-    "build:v1.1": "cd ../analytics-v1.1 && npm run build:browser",
-    "build:integrations": "cd ../analytics-js-integrations && npm run build:browser",
-    "build:v3": "cd ../analytics-js && npm run build:browser",
+    "build:sdk:v1.1": "cd ../analytics-v1.1 && npm run build:browser",
+    "build:sdk:v1.1:modern": "cd ../analytics-v1.1 && npm run build:browser:modern",
+    "build:sdk:integrations": "cd ../analytics-js-integrations && npm run build:browser",
+    "build:sdk:integrations:modern": "cd ../analytics-js-integrations && npm run build:browser:modern",
+    "build:sdk": "cd ../analytics-js && npm run build:browser",
+    "build:sdk:modern": "cd ../analytics-js && npm run build:browser:modern",
+    "build:sdk:plugins": "cd ../analytics-js-plugins && npm run build:browser:modern",
     "build:browser:modern": "exit 0",
     "build:browser": "exit 0",
-    "build:npm": "rollup -c --environment DISTRIBUTION_TYPE:npm",
     "build:npm:modern": "exit 0",
     "build:package": "exit 0",
     "build:package:modern": "exit 0",
@@ -26,32 +32,28 @@
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "jscpd src/testBook",
     "check:security": "npm audit --recursive --audit-level=high",
-    "start:modern": "exit 0",
     "build:modern": "exit 0",
     "package": "exit 0",
     "release": "exit 0",
-    "start:integrations": "npm run clean && mkdir dist && mkdir dist/local && npm run build:v1.1 && npm run build:integrations && rsync -r ../analytics-js-integrations/dist/cdn/legacy/js-integrations dist/local && npm run start:local",
-    "build:start:local:v3": "npm run build:v3 && npm run start:local:v3",
-    "build:start:local:v1.1": "npm run build:v1.1 && npm run start:local:v1.1",
-    "start:local": "DEV_SERVER=true npm run build -- --watch",
-    "start:local:v3": "DEV_SERVER=true npm run build:local:v3 -- --watch",
+    "build:sdk:start": "npm run build:sdk && npm run start:local",
+    "build:sdk:start:modern": "npm run build:sdk:modern && npm run start:local:modern",
+    "build:sdk:start:v1.1": "npm run build:sdk:v1.1 && npm run start:local:v1.1",
+    "build:sdk:start:v1.1:modern": "npm run build:sdk:v1.1:modern && npm run start:local:v1.1:modern",
+    "start:local": "DEV_SERVER=true npm run build:local -- --watch",
+    "start:local:modern": "BUILD_TYPE=modern DEV_SERVER=true npm run build:local -- --watch",
     "start:local:v1.1": "DEV_SERVER=true npm run build:local:v1.1 -- --watch",
+    "start:local:v1.1:modern": "BUILD_TYPE=modern DEV_SERVER=true npm run build:local:v1.1 -- --watch",
     "start:cdn": "DEV_SERVER=true npm run build:cdn -- --watch",
     "start:cdn:v1.1": "DEV_SERVER=true npm run build:cdn:v1.1 -- --watch",
-    "start:cdn:v1": "DEV_SERVER=true npm run build:cdn:v1 -- --watch",
-    "start:cdn:v3": "DEV_SERVER=true npm run build:cdn:v3 -- --watch",
-    "start:npm": "DEV_SERVER=true npm run build:npm -- --watch",
     "start:npm:v1.1": "DEV_SERVER=true npm run build:npm:v1.1 -- --watch",
-    "start:npm:v3": "DEV_SERVER=true npm run build:npm:v3 -- --watch",
-    "build:cdn": "rollup -c --environment DISTRIBUTION_TYPE:cdn",
+    "start:npm": "DEV_SERVER=true npm run build:npm -- --watch",
     "build:cdn:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:cdn,SDK_VERSION:v1.1",
-    "build:cdn:v1": "rollup -c --environment DISTRIBUTION_TYPE:cdn,SDK_VERSION:v1",
-    "build:cdn:v3": "rollup -c --environment DISTRIBUTION_TYPE:cdn,SDK_VERSION:v3",
+    "build:cdn": "rollup -c --environment DISTRIBUTION_TYPE:cdn,SDK_VERSION:v3",
     "build:local:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:local,SDK_VERSION:v1.1",
-    "build:local:v3": "rollup -c --environment DISTRIBUTION_TYPE:local,SDK_VERSION:v3",
-    "build:npm:v1.1": "SDK_VERSION=v1.1 npm run build:npm",
-    "build:npm:v3": "SDK_VERSION=v3 npm run build:npm",
-    "build:all": "npm run build:cdn:v1.1 && npm run build:cdn:v3 && npm run build:npm:v1.1 && npm run build:npm:v3 && rimraf -rf ./dist/dts"
+    "build:local": "rollup -c --environment DISTRIBUTION_TYPE:local,SDK_VERSION:v3",
+    "build:npm:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:npm,SDK_VERSION:v1.1,BUILD_TYPE:modern",
+    "build:npm": "rollup -c --environment DISTRIBUTION_TYPE:npm,SDK_VERSION:v3,BUILD_TYPE:modern",
+    "build:all": "npm run build:cdn:v1.1 && npm run build:cdn && npm run build:npm:v1.1 && npm run build:npm && rimraf -rf ./dist/dts"
   },
   "author": "RudderStack",
   "license": "Elastic-2.0",
