chore: fix sanity suite issues

--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -47,12 +47,14 @@
     "start:cdn:v1.1": "DEV_SERVER=true npm run build:cdn:v1.1 -- --watch",
     "start:npm:v1.1": "DEV_SERVER=true npm run build:npm:v1.1 -- --watch",
     "start:npm": "DEV_SERVER=true npm run build:npm -- --watch",
+    "start:npm:bundled": "DEV_SERVER=true npm run build:npm:bundled -- --watch",
     "build:cdn:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:cdn,SDK_VERSION:v1.1",
     "build:cdn": "rollup -c --environment DISTRIBUTION_TYPE:cdn,SDK_VERSION:v3",
     "build:local:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:local,SDK_VERSION:v1.1",
     "build:local": "rollup -c --environment DISTRIBUTION_TYPE:local,SDK_VERSION:v3",
     "build:npm:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:npm,SDK_VERSION:v1.1,BUILD_TYPE:modern",
     "build:npm": "rollup -c --environment DISTRIBUTION_TYPE:npm,SDK_VERSION:v3,BUILD_TYPE:modern",
+    "build:npm:bundled": "rollup -c --environment DISTRIBUTION_TYPE:npm_bundled,SDK_VERSION:v3,BUILD_TYPE:modern",
     "build:all": "npm run build:cdn:v1.1 && npm run build:cdn && npm run build:npm:v1.1 && npm run build:npm && rimraf -rf ./dist/dts"
   },
   "author": "RudderStack",
