--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -2,6 +2,10 @@ name: Draft a new release
 
 on:
   workflow_dispatch:
+    inputs:
+      release_ticket_id:
+        description: Release ticket ID (Ex:- SDK-1234)
+        required: true
 
 env:
   NODE_OPTIONS: '--no-warnings'
@@ -54,7 +58,7 @@ jobs:
           new_version=$(jq -r .version package.json)
           git reset --hard
 
-          branch_name="${release_type}/${new_version}"
+          branch_name="${release_type}/${new_version}-${{ github.event.inputs.release_ticket_id }}"
 
           echo "Source branch for new release is $source_branch_name"
           echo "Current version is $current_version"
@@ -83,6 +87,7 @@ jobs:
           ./scripts/generate-last-release-changelog.sh
           npm run bump-version:monorepo
           npx replace $CURRENT_VERSION_VALUE $NEW_VERSION_VALUE sonar-project.properties
+          npm install
           npm run clean
           git add .
           git commit -m "chore(monorepo): sync versions and generate release logs" -n
@@ -98,7 +103,11 @@ jobs:
           destination_branch: 'main'
           github_token: ${{ secrets.PAT }}
           pr_title: 'chore(release): pull ${{ steps.create-release.outputs.branch_name }} into main'
-          pr_body: ':crown: *An automated PR*'
+          pr_body: |
+            :crown: *An automated PR*
+            \n\n
+            Linear Ticket: 
+            https://linear.app/rudderstack/issue/${{ github.event.inputs.release_ticket_id }}
 
       - name: Delete hotfix release base branch
         continue-on-error: true
