--- a/packages/analytics-js-plugins/project.json
+++ b/packages/analytics-js-plugins/project.json
@@ -44,9 +44,10 @@
       "executor": "@jscutlery/semver:version",
       "options": {
         "baseBranch": "main",
-        "preset": "conventional",
+        "preset": "conventionalcommits",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true
+        "trackDeps": true,
+        "push": true
       }
     },
     "github": {
