--- a/packages/analytics-js-cookies/project.json
+++ b/packages/analytics-js-cookies/project.json
@@ -43,11 +43,9 @@
     "version": {
       "executor": "@jscutlery/semver:version",
       "options": {
-        "baseBranch": "main",
         "preset": "conventionalcommits",
         "tagPrefix": "{projectName}@",
-        "trackDeps": true,
-        "push": true
+        "trackDeps": true
       }
     },
     "github": {
