--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -106,7 +106,9 @@ jobs:
           pr_title: 'chore(release): pull ${{ steps.create-release.outputs.branch_name }} into main'
           pr_body: |
             :crown: *An automated PR*
-            \n\n
+            
+            This PR is created automatically by the GitHub Actions workflow to merge the release branch into the main branch.
+            
             Linear Ticket: 
             https://linear.app/rudderstack/issue/${{ github.event.inputs.release_ticket_id }}
 
