chore: sonar conflicts resolved

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/anal
 # Path to sources
 sonar.sources=packages
 sonar.inclusions=**/src/**/*.js, **/src/**/*.ts
-sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-common/src/constants/integrations/**/*.js,packages/analytics-js-common/src/v1.1/utils/integration_cname.js,packages/analytics-js-common/src/v1.1/utils/client_server_name.js,packages/analytics-js-common/src/v1.1/utils/config_to_integration_names.js
+sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-plugins/src/errorReporting/event/**/*,common/src/constants/integrations/**/*.js,packages/analytics-js-common/src/v1.1/utils/integration_cname.js,packages/analytics-js-common/src/v1.1/utils/client_server_name.js,packages/analytics-js-common/src/v1.1/utils/config_to_integration_names.js
 
 # Path to tests
 sonar.tests=packages
@@ -28,7 +28,7 @@ sonar.test.inclusions=**/__tests__/**/*
 sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,packages/analytics-js-plugins/src/errorReporting/event/**/*
 
 # Coverage config
-sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-common/src/constants/integrations/**/*.js,packages/analytics-js-common/src/v1.1/utils/integration_cname.js,packages/analytics-js-common/src/v1.1/utils/client_server_name.js,packages/analytics-js-common/src/v1.1/utils/config_to_integration_names.js
+sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-plugins/src/errorReporting/event/**/*,packages/analytics-js-common/src/constants/integrations/**/*,common/src/constants/integrations/**/*.js,packages/analytics-js-common/src/v1.1/utils/integration_cname.js,packages/analytics-js-common/src/v1.1/utils/client_server_name.js,packages/analytics-js-common/src/v1.1/utils/config_to_integration_names.js
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
