--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "check:pub": "nx run-many -t check:pub --verbose",
     "check:pub:ci": "nx affected -t check:pub --verbose --base=$BASE_REF",
     "format": "prettier --write .",
-    "lint:fix": "eslint . --fix",
+    "lint:fix": "nx run-many -t check:lint --fix",
     "prepare": "husky",
     "pre-commit": "npm run test:pre-commit:affected && npm run check:size:build:pre-commit:affected && npm run check:size:json:pre-commit:affected && npx lint-staged",
     "commit-msg": "commitlint --edit",
@@ -72,13 +72,13 @@
     "@ndhoule/defaults": "2.0.1",
     "@ndhoule/each": "2.0.1",
     "@ndhoule/extend": "2.0.0",
-    "@preact/signals-core": "1.6.1",
+    "@preact/signals-core": "1.8.0",
     "@segment/localstorage-retry": "1.3.0",
     "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.1.0",
-    "axios": "1.7.2",
-    "axios-retry": "4.4.0",
+    "axios": "1.7.3",
+    "axios-retry": "4.5.0",
     "component-each": "0.2.6",
     "component-emitter": "2.0.0",
     "component-type": "2.0.0",
@@ -105,25 +105,25 @@
     "storejs": "2.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.24.7",
-    "@babel/eslint-parser": "7.24.7",
+    "@babel/core": "7.25.2",
+    "@babel/eslint-parser": "7.25.1",
     "@babel/plugin-transform-arrow-functions": "7.24.7",
     "@babel/plugin-transform-class-properties": "7.24.7",
     "@babel/plugin-transform-object-assign": "7.24.7",
     "@babel/plugin-transform-private-methods": "7.24.7",
     "@babel/plugin-transform-private-property-in-object": "7.24.7",
     "@babel/plugin-transform-runtime": "7.24.7",
-    "@babel/preset-env": "7.24.7",
+    "@babel/preset-env": "7.25.3",
     "@babel/preset-typescript": "7.24.7",
     "@commitlint/config-conventional": "19.2.2",
     "@commitlint/config-nx-scopes": "19.3.1",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
-    "@jscutlery/semver": "5.2.2",
-    "@nx/eslint": "19.3.0",
-    "@nx/eslint-plugin": "19.3.0",
-    "@nx/jest": "19.3.0",
-    "@nx/js": "19.3.0",
-    "@nx/workspace": "19.3.0",
+    "@jscutlery/semver": "5.3.1",
+    "@nx/eslint": "19.5.7",
+    "@nx/eslint-plugin": "19.5.7",
+    "@nx/jest": "19.5.7",
+    "@nx/js": "19.5.7",
+    "@nx/workspace": "19.5.7",
     "@originjs/vite-plugin-federation": "1.3.5",
     "@rollup/plugin-alias": "5.1.0",
     "@rollup/plugin-babel": "6.0.4",
@@ -134,16 +134,16 @@
     "@rollup/plugin-terser": "0.4.4",
     "@size-limit/file": "11.1.4",
     "@size-limit/webpack": "11.1.4",
-    "@swc-node/register": "^1.9.1",
-    "@swc/core": "^1.5.7",
+    "@swc-node/register": "1.10.9",
+    "@swc/core": "1.7.6",
     "@types/component-emitter": "1.2.14",
     "@types/jest": "29.5.12",
-    "@types/node": "20.12.12",
-    "@types/ramda": "0.30.0",
+    "@types/node": "22.1.0",
+    "@types/ramda": "0.30.1",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
-    "commitlint": "19.3.0",
-    "core-js": "3.37.1",
+    "commitlint": "19.4.0",
+    "core-js": "3.38.0",
     "dotenv": "16.4.5",
     "each": "2.7.0",
     "eslint": "8.57.0",
@@ -151,15 +151,15 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-compat": "5.0.0",
+    "eslint-plugin-compat": "6.0.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-sonarjs": "1.0.3",
-    "eslint-plugin-unicorn": "54.0.0",
+    "eslint-plugin-sonarjs": "1.0.4",
+    "eslint-plugin-unicorn": "55.0.0",
     "esm": "3.2.25",
     "http-server": "14.1.1",
-    "husky": "9.0.11",
+    "husky": "9.1.4",
     "isomorphic-fetch": "3.0.0",
     "jest": "29.7.0",
     "jest-date-mock": "1.0.10",
@@ -168,19 +168,19 @@
     "jest-sonar": "0.2.16",
     "jest-watch-typeahead": "2.2.2",
     "join-component": "1.1.0",
-    "jscpd": "4.0.4",
-    "lint-staged": "15.2.7",
-    "msw": "2.3.1",
-    "nx": "19.3.0",
+    "jscpd": "4.0.5",
+    "lint-staged": "15.2.8",
+    "msw": "2.3.5",
+    "nx": "19.5.7",
     "patch-package": "8.0.0",
-    "prettier": "3.3.2",
-    "publint": "0.2.8",
-    "rollup": "4.18.0",
+    "prettier": "3.3.3",
+    "publint": "0.2.9",
+    "rollup": "4.20.0",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
-    "rollup-plugin-external-globals": "0.10.0",
+    "rollup-plugin-external-globals": "0.11.0",
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
@@ -190,18 +190,18 @@
     "rollup-plugin-visualizer": "5.12.0",
     "serve": "14.2.3",
     "size-limit": "11.1.4",
-    "ts-jest": "29.1.5",
+    "ts-jest": "29.2.4",
     "ts-node": "10.9.2",
     "tslib": "2.6.3",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "user-agent-data-types": "0.4.2"
   },
   "optionalDependencies": {
-    "@nx/nx-darwin-arm64": "19.3.0",
-    "@nx/nx-darwin-x64": "19.3.0",
-    "@nx/nx-linux-x64-gnu": "19.3.0",
-    "@nx/nx-win32-x64-msvc": "19.3.0",
-    "@rollup/rollup-linux-x64-gnu": "4.18.0"
+    "@nx/nx-darwin-arm64": "19.5.7",
+    "@nx/nx-darwin-x64": "19.5.7",
+    "@nx/nx-linux-x64-gnu": "19.5.7",
+    "@nx/nx-win32-x64-msvc": "19.5.7",
+    "@rollup/rollup-linux-x64-gnu": "4.20.0"
   },
   "overrides": {
     "debug": "4.3.4",
