--- a/.github/workflows/security-code-quality-and-bundle-size-checks.yml
+++ b/.github/workflows/security-code-quality-and-bundle-size-checks.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Execute code quality checks
         run: |
+          npm run check:circular
           npm run check:duplicates
 
       - name: Build the project
