--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.1.0",
-    "axios": "1.7.3",
+    "axios": "1.7.4",
     "axios-retry": "4.5.0",
     "component-each": "0.2.6",
     "component-emitter": "2.0.0",
@@ -135,10 +135,10 @@
     "@size-limit/file": "11.1.4",
     "@size-limit/webpack": "11.1.4",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.7.6",
+    "@swc/core": "1.7.11",
     "@types/component-emitter": "1.2.14",
     "@types/jest": "29.5.12",
-    "@types/node": "22.1.0",
+    "@types/node": "22.3.0",
     "@types/ramda": "0.30.1",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
@@ -169,7 +169,8 @@
     "jest-watch-typeahead": "2.2.2",
     "join-component": "1.1.0",
     "jscpd": "4.0.5",
-    "lint-staged": "15.2.8",
+    "lint-staged": "15.2.9",
+    "madge": "8.0.0",
     "msw": "2.3.5",
     "nx": "19.5.7",
     "patch-package": "8.0.0",
@@ -180,7 +181,7 @@
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
-    "rollup-plugin-external-globals": "0.11.0",
+    "rollup-plugin-external-globals": "0.12.0",
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
