chore: fix tsconfig files

--- a/packages/analytics-js-common/tsconfig.json
+++ b/packages/analytics-js-common/tsconfig.json
@@ -9,6 +9,6 @@
     "sourceMap": false,
     "declarationMap": false
   },
-  "include": ["./src/**/*", "../../types/**/*"],
+  "include": ["./package.json", "../../types/**/*", "./src/**/*"],
   "references": []
 }
