--- a/packages/analytics-js-common/tsconfig.spec.json
+++ b/packages/analytics-js-common/tsconfig.spec.json
@@ -13,11 +13,12 @@
     "target": "es6"
   },
   "include": [
-    "jest.config.mjs",
-    "__tests__/**/*.ts",
-    "__mocks__/**/*.ts",
-    "__fixtures__/**/*.ts",
-    "src/**/*.ts",
-    "src/**/*.d.ts"
+    "./jest.config.mjs",
+    "./__tests__/**/*",
+    "./__mocks__/**/*",
+    "./__fixtures__/**/*",
+    "./package.json",
+    "./src/**/*",
+    "../../types/**/*"
   ]
 }
