--- a/packages/analytics-js-plugins/tsconfig.json
+++ b/packages/analytics-js-plugins/tsconfig.json
@@ -9,7 +9,6 @@
     "./src/**/*",
     "../../types/**/*",
     "../analytics-js-common/src/**/*",
-    "../analytics-js-cookies/src/**/*",
-    "../analytics-js/src/**/*"
+    "../analytics-js-cookies/src/**/*"
   ]
 }
