--- a/packages/analytics-js-plugins/tsconfig.spec.json
+++ b/packages/analytics-js-plugins/tsconfig.spec.json
@@ -12,13 +12,14 @@
     "target": "es6"
   },
   "include": [
-    "jest.config.mjs",
-    "__tests__/**/*.ts",
-    "__mocks__/**/*.ts",
-    "__fixtures__/**/*.ts",
-    "src/**/*.ts",
-    "src/**/*.d.ts",
+    "./package.json",
+    "./jest.config.mjs",
+    "./__tests__/**/*",
+    "./__mocks__/**/*",
+    "./__fixtures__/**/*",
+    "../../types/**/*",
+    "./src/**/*",
     "../analytics-js-common/src/**/*",
-    "../analytics-js/src/**/*"
+    "../analytics-js-cookies/src/**/*"
   ]
 }
