--- a/packages/loading-scripts/tsconfig.json
+++ b/packages/loading-scripts/tsconfig.json
@@ -5,11 +5,5 @@
     "declarationDir": "./dist/dts",
     "isolatedModules": false
   },
-  "include": [
-    "./package.json",
-    "./src/**/*",
-    "./__mocks__/*.json",
-    "./__fixtures__/*.json",
-    "../../types/**/*"
-  ]
+  "include": ["./package.json", "./src/**/*", "../../types/**/*", "../analytics-js/src/**/*"]
 }
