--- a/packages/sanity-suite/tsconfig.spec.json
+++ b/packages/sanity-suite/tsconfig.spec.json
@@ -11,12 +11,13 @@
     "types": ["jest", "node"]
   },
   "include": [
-    "jest.config.mjs",
-    "__tests__/**/*.ts",
-    "__mocks__/**/*.ts",
-    "__fixtures__/**/*.ts",
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.d.ts"
+    "./package.json",
+    "./jest.config.mjs",
+    "./__tests__/**/*",
+    "./__mocks__/**/*",
+    "./__fixtures__/**/*",
+    "../../types/**/*",
+    "./src/**/*",
+    "../analytics-js/src/**/*"
   ]
 }
