--- a/packages/analytics-js-cookies/tsconfig.spec.json
+++ b/packages/analytics-js-cookies/tsconfig.spec.json
@@ -13,12 +13,11 @@
     "target": "es6"
   },
   "include": [
-    "jest.config.mjs",
-    "__tests__/**/*.ts",
-    "__mocks__/**/*.ts",
-    "__fixtures__/**/*.ts",
-    "src/**/*.ts",
-    "src/**/*.d.ts",
+    "./jest.config.mjs",
+    "./__tests__/**/*",
+    "./__mocks__/**/*",
+    "./__fixtures__/**/*",
+    "./src/**/*",
     "../../types/**/*",
     "./package.json",
     "../analytics-js-common/src/**/*"
