--- a/packages/sanity-suite/tsconfig.json
+++ b/packages/sanity-suite/tsconfig.json
@@ -4,11 +4,5 @@
     "target": "es5",
     "declarationDir": "./dist/dts"
   },
-  "include": [
-    "./package.json",
-    "./src/**/*",
-    "./__mocks__/*.json",
-    "./__fixtures__/*.json",
-    "../../types/**/*"
-  ]
+  "include": ["./package.json", "./src/**/*", "../../types/**/*", "../analytics-js/src/**/*"]
 }
