--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "@segment/localstorage-retry": "1.3.0",
     "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
-    "assert": "2.1.0",
-    "axios": "1.7.4",
+    "axios": "1.7.5",
     "axios-retry": "4.5.0",
     "component-each": "0.2.6",
     "component-emitter": "2.0.0",
@@ -108,22 +107,22 @@
     "@babel/core": "7.25.2",
     "@babel/eslint-parser": "7.25.1",
     "@babel/plugin-transform-arrow-functions": "7.24.7",
-    "@babel/plugin-transform-class-properties": "7.24.7",
+    "@babel/plugin-transform-class-properties": "7.25.4",
     "@babel/plugin-transform-object-assign": "7.24.7",
-    "@babel/plugin-transform-private-methods": "7.24.7",
+    "@babel/plugin-transform-private-methods": "7.25.4",
     "@babel/plugin-transform-private-property-in-object": "7.24.7",
-    "@babel/plugin-transform-runtime": "7.24.7",
-    "@babel/preset-env": "7.25.3",
+    "@babel/plugin-transform-runtime": "7.25.4",
+    "@babel/preset-env": "7.25.4",
     "@babel/preset-typescript": "7.24.7",
     "@commitlint/config-conventional": "19.2.2",
     "@commitlint/config-nx-scopes": "19.3.1",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
     "@jscutlery/semver": "5.3.1",
-    "@nx/eslint": "19.5.7",
-    "@nx/eslint-plugin": "19.5.7",
-    "@nx/jest": "19.5.7",
-    "@nx/js": "19.5.7",
-    "@nx/workspace": "19.5.7",
+    "@nx/eslint": "19.6.3",
+    "@nx/eslint-plugin": "19.6.3",
+    "@nx/jest": "19.6.3",
+    "@nx/js": "19.6.3",
+    "@nx/workspace": "19.6.3",
     "@originjs/vite-plugin-federation": "1.3.5",
     "@rollup/plugin-alias": "5.1.0",
     "@rollup/plugin-babel": "6.0.4",
@@ -135,15 +134,15 @@
     "@size-limit/file": "11.1.4",
     "@size-limit/webpack": "11.1.4",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.7.11",
+    "@swc/core": "1.7.18",
     "@types/component-emitter": "1.2.14",
     "@types/jest": "29.5.12",
-    "@types/node": "22.3.0",
-    "@types/ramda": "0.30.1",
+    "@types/node": "22.5.0",
+    "@types/ramda": "0.30.2",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "19.4.0",
-    "core-js": "3.38.0",
+    "core-js": "3.38.1",
     "dotenv": "16.4.5",
     "each": "2.7.0",
     "eslint": "8.57.0",
@@ -152,14 +151,14 @@
     "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-node": "0.3.9",
-    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-compat": "6.0.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-sonarjs": "1.0.4",
+    "eslint-plugin-sonarjs": "2.0.1",
     "eslint-plugin-unicorn": "55.0.0",
     "esm": "3.2.25",
     "http-server": "14.1.1",
-    "husky": "9.1.4",
+    "husky": "9.1.5",
     "isomorphic-fetch": "3.0.0",
     "jest": "29.7.0",
     "jest-date-mock": "1.0.10",
@@ -172,11 +171,11 @@
     "lint-staged": "15.2.9",
     "madge": "8.0.0",
     "msw": "2.3.5",
-    "nx": "19.5.7",
+    "nx": "19.6.3",
     "patch-package": "8.0.0",
     "prettier": "3.3.3",
-    "publint": "0.2.9",
-    "rollup": "4.20.0",
+    "publint": "0.2.10",
+    "rollup": "4.21.1",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "6.1.1",
@@ -191,20 +190,21 @@
     "rollup-plugin-visualizer": "5.12.0",
     "serve": "14.2.3",
     "size-limit": "11.1.4",
-    "ts-jest": "29.2.4",
+    "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "tslib": "2.6.3",
+    "tslib": "2.7.0",
     "typescript": "5.5.4",
     "user-agent-data-types": "0.4.2"
   },
   "optionalDependencies": {
-    "@nx/nx-darwin-arm64": "19.5.7",
-    "@nx/nx-darwin-x64": "19.5.7",
-    "@nx/nx-linux-x64-gnu": "19.5.7",
-    "@nx/nx-win32-x64-msvc": "19.5.7",
-    "@rollup/rollup-linux-x64-gnu": "4.20.0"
+    "@nx/nx-darwin-arm64": "19.6.3",
+    "@nx/nx-darwin-x64": "19.6.3",
+    "@nx/nx-linux-x64-gnu": "19.6.3",
+    "@nx/nx-win32-x64-msvc": "19.6.3",
+    "@rollup/rollup-linux-x64-gnu": "4.21.1"
   },
   "overrides": {
+    "micromatch": "4.0.8",
     "debug": "4.3.4",
     "ws": "7.5.10"
   },
