--- a/packages/analytics-js-cookies/package.json
+++ b/packages/analytics-js-cookies/package.json
@@ -89,22 +89,7 @@
     "release": "npm publish"
   },
   "dependencies": {
-    "@rudderstack/analytics-js-common": "*",
-    "@rollup/plugin-babel": "6.0.4",
-    "@rollup/plugin-commonjs": "26.0.1",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-replace": "5.0.7",
-    "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-json": "6.1.0",
-    "rollup-plugin-visualizer": "5.12.0",
-    "rollup-plugin-filesize": "10.0.0",
-    "rollup-plugin-typescript2": "0.36.0",
-    "rollup-plugin-polyfill-node": "0.13.0",
-    "@babel/core": "7.25.2",
-    "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-dts": "6.1.1",
-    "@rollup/plugin-alias": "5.1.0",
-    "dotenv": "16.4.5"
+    "@rudderstack/analytics-js-common": "*"
   },
   "devDependencies": {},
   "overrides": {},
