chore: fix misc issues

--- a/nx.json
+++ b/nx.json
@@ -119,12 +119,15 @@
       "!{projectRoot}/.size-limit.js",
       "!{projectRoot}/.size-limit.mjs",
       "!{projectRoot}/.jscpd.json",
+      "!{projectRoot}/jest.config.mjs",
+      "!{projectRoot}/rollup-configs/**/*",
       "{workspaceRoot}/tsconfig.build.json",
       "{workspaceRoot}/tsconfig.json",
       "{workspaceRoot}/tsconfig.paths.json",
       "{workspaceRoot}/package.json",
       "{workspaceRoot}/package-lock.json",
       "{workspaceRoot}/babel.config.json",
+      "{workspaceRoot}/babel-plugin-mark-private.mjs",
       "{workspaceRoot}/types/**/*",
       "{workspaceRoot}/nx.json"
     ],
